@@ -1,3 +1,8 @@
+2004-03-18  Eric A. Welsh <ewelsh@ccb.wustl.edu>
+
+	* timidity/mix.c (recompute_envelope, recompute_modulation_envelope):
+	  fix for -m option (was not working correctly)
+
 2004-03-17  Saito <saito@intaa.net>
 
 	* interface/w32g.h, interface/w32g_i.c, interface/w32g_c.c:
